fix overflow

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -26,4 +26,5 @@ html, body {
 
 body {
     background-color: $beige;
+    overflow-x: hidden;
 }
